--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,61 @@
+body {
+  background-color: #e1e1e1;
+}
+
+* {
+  font-family: Montserrat, Arial;
+}
+
+p, h1, ul, li {
+  margin: 0;
+}
+
+.navigation h1 {
+  margin-bottom: 0.2em;
+  text-align: center;
+}
+
 .navigation {
-  margin: auto;
-  display: inline-block;
+  width: 30%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  padding: 5px 20px 10px 20px;
+  background-color: lightgreen;
+  border: 3px solid black;
+}
+
+.recipes-list {
+  display: flex;
+}
+
+.recipe {
+  display: flex;
+  flex-direction: row;
+
+  margin-bottom: 0.5em;
+}
+
+.recipe-image {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 2px solid black;
+
+  object-fit: cover;
+  object-position: center;
+
+  margin-right: 0.5em;
+  
+}
+
+.recipe-link {
+  font-size: 1.2em;
+}
+
+.recipe-description-short {
+  font-weight: thin;
+  font-size: 1em;
 }
