--- a/styles/recipe.css
+++ b/styles/recipe.css
@@ -5,11 +5,14 @@
 }
 
 body {
-  margin: 40px auto;
+  margin: 5em auto 10em auto;
   max-width: 40%;
-  background-color: lightpink;
+  min-width: 300px;
+  background-color: #e1e1e1;
+  box-shadow: 0px 0px 10px grey;
+  padding: 1em 1em;
+  border: 3px solid green;
 }
-
 
 .header {
   z-index: 1;
@@ -18,27 +21,51 @@ body {
   left: 0;
   right: 0;
   height: 4em;
-  background-color: lightblue;
+
+  background-color: lightgreen;
+  border-bottom: 2px solid black;
 
   display: flex;
   justify-content: right;
   align-items: center;
-  gap: 1em;
+  gap: 2em;
 }
 
 .icon-pic {
   height: 90%;
-  margin-right: 1em;
+  margin-right: 2em;
 }
 
 .home-header-link {
   font-size: 2em;
 }
 
+h1 {
+  text-align: center;
+  margin-bottom: 0.2em;
+}
+
+h2 {
+  margin-bottom: 0.2em;
+}
+
+p {
+  margin-bottom: 0.2em;
+}
+
+ul li {
+  margin-bottom: 0.1em;
+}
+
+ol li {
+  margin-bottom: 0.3em;
+}
+
 
 .recipe-pic {
-  height: 400px; 
-  height: 400px; 
+  width: 90%;  
+  border: 3px solid green;
   object-fit: cover; 
   object-position: right;
+  margin-bottom: 0.5em;
 }
